--- a/package.json
+++ b/package.json
@@ -28,11 +28,9 @@
     "LICENSE"
   ],
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
     "esbuild": "^0.19.4",
-    "esbuild-sass-plugin": "^2.15.0",
     "eslint": "^8.50.0",
-    "postcss": "^8.4.31",
-    "sass": "^1.68.0"
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard": "^34.0.0"
   }
 }
