--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,9 @@
 {
-  "extends": "stylelint-config-standard",
-  "ignoreFiles": [
-    "build/**/*.css"
-]
+    "extends": "stylelint-config-standard",
+    "ignoreFiles": [
+        "build/**/*.css"
+    ],
+    "rules": {
+        "import-notation": "string"
+    }
 }
